[package]
name = "rust-run"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-run"
path = "src/main.rs"

[[bin]]
name = "term-test"
path = "main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.1", features = ["derive"] }
ctrlc = "3.2"
libc = "0.2"
